--- a/logitechmediaserver/Dockerfile
+++ b/logitechmediaserver/Dockerfile
@@ -16,7 +16,7 @@ CMD ["/sbin/my_init"]
 #########################################
 
 COPY install.sh /tmp/
-RUN chmod +x /tmp/install.sh && /tmp/install.sh && rm /tmp/install.sh
+RUN chmod +x /tmp/install.sh; sync; /tmp/install.sh; sync; rm /tmp/install.sh
 
 #########################################
 ##         EXPORTS AND VOLUMES         ##
